--- a/cmd/event-processor/config.json
+++ b/cmd/event-processor/config.json
@@ -1,3 +1,12 @@
 {
-  "messageQueueUrl": "http://localhost:4566/000000000000/test-queue"
+  "messageQueueUrl": "http://localhost:4566/000000000000/event-queue",
+  "db": {
+    "driver": "postgres",
+    "host": "localhost",
+    "user": "postgres",
+    "port": 5432,
+    "password": "password",
+    "dbname": "onbloc",
+    "sslMode": "disable"
+  }
 }
